# my-amplifier

./: .gitignore  .pre-commit-config.yaml  bundle.md
.github/workflows/: lint.yml
agents/: fast-local.md
bundles/: local-light.md  my-amplifier-lean.md  my-amplifier-safe.md
configs/: local-profile.sh  macstudio-local-provider.yaml
context/: REDESIGN-NOTES.md  amplifier-note.md  attention-firewall.md  fleet-awareness.md  m365-collaboration.md  omlx-awareness.md  user-habits.md
m365-collaboration/: .env.example  __init__.py  auth.py  cli.py  collaboration.py  config.py  graph_client.py  pyproject.toml  test_connection.py  tool.py
modules/hooks-delegate-ratio/: pyproject.toml
modules/hooks-delegate-ratio/amplifier_module_hooks_delegate_ratio/: __init__.py  _logic.py
modules/hooks-delegate-ratio/tests/: test_logic.py
modules/hooks-inbox-drain/: .gitignore  pyproject.toml
modules/hooks-inbox-drain/amplifier_module_hooks_inbox_drain/: __init__.py  notify.py
modules/hooks-token-warning/: pyproject.toml
modules/hooks-token-warning/amplifier_module_hooks_token_warning/: __init__.py  _logic.py
modules/hooks-token-warning/tests/: test_logic.py
scripts/: check-lean-no-foundation.py
tools/attention-firewall/: __init__.py  pyproject.toml
tools/attention-firewall/amplifier_module_attention_firewall/: __init__.py  tool.py
