[project]
name = "m365-collaboration"
version = "0.1.0"
description = "M365-based agent collaboration for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
