[project]
name = "amplifier-module-hooks-delegate-ratio"
version = "1.0.0"
description = "LOG-ONLY: record delegate-vs-heavy-tool ratio per session (no context injection)"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-delegate-ratio = "amplifier_module_hooks_delegate_ratio:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_delegate_ratio"]
