[project]
name = "amplifier-module-hooks-inbox-drain"
version = "1.0.0"
description = "Drain per-session note inboxes into the conversation at provider:request (tmux-window addressed)"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-inbox-drain = "amplifier_module_hooks_inbox_drain:mount"

[project.scripts]
amplifier-note = "amplifier_module_hooks_inbox_drain.notify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_inbox_drain"]
