[project]
name = "amplifier-module-attention-firewall"
version = "1.0.0"
description = "Amplifier tool for querying Attention Firewall database"
requires-python = ">=3.10"
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
attention_firewall = "amplifier_module_attention_firewall:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_attention_firewall"]
